@@ -31,13 +31,7 @@
  * Purpose: send configuration tables to the proxy from server                *
  *          (for active proxies)                                              *
  *                                                                            *
- * Parameters:                                                                *
- *                                                                            *
- * Return value:                                                              *
- *                                                                            *
  * Author: Alexander Vladishev                                                *
- *                                                                            *
- * Comments:                                                                  *
  *                                                                            *
  ******************************************************************************/
 void	send_proxyconfig(zbx_sock_t *sock, struct zbx_json_parse *jp)
@@ -87,13 +81,7 @@ out:
  *                                                                            *
  * Purpose: receive configuration tables from server (passive proxies)        *
  *                                                                            *
- * Parameters:                                                                *
- *                                                                            *
- * Return value:                                                              *
- *                                                                            *
  * Author: Alexander Vladishev                                                *
- *                                                                            *
- * Comments:                                                                  *
  *                                                                            *
  ******************************************************************************/
 void	recv_proxyconfig(zbx_sock_t *sock, struct zbx_json_parse *jp)
