@@ -28,24 +28,16 @@
  *                                                                            *
  * Function: recv_discovery_data                                              *
  *                                                                            *
- * Purpose:                                                                   *
- *                                                                            *
- * Parameters:                                                                *
- *                                                                            *
- * Return value:                                                              *
- *                                                                            *
  * Author: Alexander Vladishev                                                *
- *                                                                            *
- * Comments:                                                                  *
  *                                                                            *
  ******************************************************************************/
 void	recv_discovery_data(zbx_sock_t *sock, struct zbx_json_parse *jp)
 {
-	const char		*__function_name = "recv_discovery_data";
+	const char	*__function_name = "recv_discovery_data";
 
-	int			ret;
-	zbx_uint64_t		proxy_hostid;
-	char			host[HOST_HOST_LEN_MAX], error[256];
+	int		ret;
+	zbx_uint64_t	proxy_hostid;
+	char		host[HOST_HOST_LEN_MAX], error[256];
 
 	zabbix_log(LOG_LEVEL_DEBUG, "In %s()", __function_name);
 
@@ -71,13 +63,7 @@ out:
  *                                                                            *
  * Purpose: send discovery data from proxy to a server                        *
  *                                                                            *
- * Parameters:                                                                *
- *                                                                            *
- * Return value:                                                              *
- *                                                                            *
  * Author: Alexander Vladishev                                                *
- *                                                                            *
- * Comments:                                                                  *
  *                                                                            *
  ******************************************************************************/
 void	send_discovery_data(zbx_sock_t *sock)
